--- a/.github/workflows/push2ec2.yml
+++ b/.github/workflows/push2ec2.yml
@@ -1,23 +1,23 @@
-name: Push-to-EC2
-# Trigger deployment only on push to master branch
+name: Deploy to AWS EC2
+
 on:
   push:
     branches:
-      - main
+      - main  # Change to your desired branch
+
 jobs:
   deploy:
-    name: Deploy to EC2 on master branch push
     runs-on: ubuntu-latest
+
     steps:
-      - name: Checkout the files
-        uses: actions/checkout@v2
-      
-      - name: Deploy to Server 1
-        uses: easingthemes/ssh-deploy@main
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.EC2_SSH_KEY }}
-          REMOTE_HOST: ${{ secrets.HOST_DNS }}
-          REMOTE_USER: ${{ secrets.USERNAME }}
-          TARGET: ${{ secrets.TARGET_DIR }}
-        with:
-          args: "-avz --delete"  # This will delete files from the target that are not in the source
+    - name: Checkout code
+      uses: actions/checkout@v2
+
+    - name: Set up SSH
+      uses: webfactory/ssh-agent@v0.5.3
+      with:
+        ssh-private-key: ${{ secrets.EC2_PRIVATE_KEY }}
+
+    - name: Run deployment script on EC2
+      run: |
+        ssh -o StrictHostKeyChecking=no ec2_user@3.85.231.35 "bash /home/ec2-user/test/deploy_project.sh"
